<resources>
    <string name="app_name">Diusframi</string>
    <string name="name">None</string>
    <string name="intelligence">Intelligence:</string>
    <string name="strength">Strength:</string>
    <string name="speed">Speed:</string>
    <string name="durability">Durability:</string>
    <string name="power">Power:</string>
    <string name="combat">Combat:</string>
    <string name="powerstats_default_value">000</string>
    <string name="herollain_name">Herollain name:</string>
    <string name="herollain_profile_picture">Herollain profile picture</string>
    <string name="is_favourite_icon">is favourite icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="herollain_detail_profile_pic">Herollain detail profile pic</string>
    <string name="gender">Gender:</string>
    <string name="race">Race:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="eye_color">Eye Color:</string>
    <string name="hair_color">Hair Color:</string>
    <string name="home_row_back_arrow">home row back arrow</string>
    <string name="power_stats">Power Stats</string>
    <string name="appearance">Appearance</string>
    <string name="biography">Biography</string>
    <string name="full_name">Full Name:</string>
    <string name="alter_egos">Alter Egos:</string>
    <string name="aliases">Aliases:</string>
    <string name="place_of_birth">Place of birth:</string>
    <string name="first_appearance">First appearance:</string>
    <string name="publisher">Publisher:</string>
    <string name="alignment">Alignment:</string>
    <string name="autocomplete_clear_button">Autocomplete clear button</string>
</resources>